# snapctx

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.snapctx/: index.db
docs/: agent-setup.md
opencode/: AGENTS.md  README.md  package-lock.json  package.json
opencode/nostream/: README.md  package-lock.json  package.json
opencode/nostream/plugins/: nostream-anthropic.js  nostream-github-copilot.js  nostream-google.js  nostream-openai.js  nostream-opencode-zen.js  nostream-shared.mjs
opencode/nostream/wrappers/: _buffer.mjs  anthropic.mjs  google.mjs  openai-compatible.mjs  openai.mjs
opencode/tools/: _snapctx_writer.py  snapctx.ts
src/neargrep/: __init__.py  api.py  cli.py  embeddings.py  index.py  qname.py  schema.py  walker.py  watch.py
src/neargrep/adapters/: mcp.py
src/neargrep/parsers/: base.py  python.py  registry.py  typescript.py
src/snapctx/: __init__.py  _serve.py  _warm.py  api.py  cli.py  config.py  index.py  qname.py  roots.py  vendor.py  walker.py  watch.py
src/snapctx/adapters/: mcp.py
src/snapctx/api/: __init__.py  _aliases.py  _common.py  _context.py  _cross_package.py  _edit.py  _edit_batch.py  _edit_sr.py  _files.py  _find.py  _graph.py  _grep.py  _imports.py  _indexer.py  _insert.py  _map.py  _multi.py  _preload.py  _ranking.py  _rename.py  _retrieve.py  _routes.py  _search.py  _skeleton.py
src/snapctx/parsers/: base.py  config.py  markdown.py  python.py  registry.py  shell.py  text.py  typescript.py
tests/: conftest.py  test_api.py  test_cli_discovery.py  test_cli_edit_ops.py  test_cli_skeleton.py  test_cli_write_ops.py  test_config.py  test_config_parsers.py  test_constants.py  test_context.py  test_context_alias.py  test_cross_package.py  test_demotion.py  test_edit.py  test_edit_batch.py  test_edit_sr.py  test_embeddings.py  test_find.py  test_grep.py  test_imports_files.py  test_incremental.py  test_index_progress_callback.py  test_insert.py  test_map.py  test_markdown_parser.py  test_mcp_adapter.py  test_multi_root.py  test_outline_hint.py  test_parser.py  test_perf.py  test_preload.py  test_promote_imported_calls.py  test_promote_local_calls.py  test_qname.py  test_qname_paraphrase.py  test_rename.py  test_roots.py  test_route_decorator_boost.py  test_routes.py  test_search_hint.py  (+8 more)
tests/fixtures/sample_pkg/: auth.py  utils.py
