[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snapctx"
version = "0.1.0"
description = "Fast, structured codebase context for AI agents — symbol graph + lexical search over Python (and more)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ktrichas" }]
dependencies = [
    "pathspec>=0.12",
    "numpy>=1.26",
    "fastembed>=0.4",
    "tree-sitter>=0.24",
    "tree-sitter-typescript>=0.23",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/snaptoolkit/snapctx"
Repository = "https://github.com/snaptoolkit/snapctx"
Issues = "https://github.com/snaptoolkit/snapctx/issues"

[project.scripts]
snapctx = "snapctx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/snapctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
